# paragon-bot

./: .env.example  README.md  main.py  pyproject.toml
configs/: tickers.py
tests/: test_api_parsing.py  test_message_format.py  test_trade_parsing.py
utils/: discord_bot.py  hyperliquid_api.py
