[project]
name = "paragon-bot"
version = "0.1.0"
description = "Discord bot that monitors Paragon perp trades on Hyperliquid"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hikari>=2.3.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "websockets>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
